--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
     "require": {
         "php": "^5.6 || ^7.0",
         "contao/core-bundle": "^4",
+        "schachbulle/contao-helper-bundle": "*",
         "menatwork/contao-multicolumnwizard-bundle": "^3.4"
     },
     "conflict": {
